Initial About Section

--- a/index.html
+++ b/index.html
@@ -1,7 +1,34 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+	<html>
+	<body>
+		<h1>Hello World</h1>
+	<p>I'm hosted with GitHub Pages.</p>
+<!-- ABOUT SECTION START --> 
+	<section id="about">
+		<div class="row">
+			<div class="three columns">
+				<div class="profile-pic"></div>
+			</div>
+			<div class="nine columns main-col">
+				<h2>About me</h2>
+				<p>I', a Computer Science Major at Stony Brook University.</p>
+				<div class="row">
+					<div class="columns contact-details">
+						<h2>Contact Details</h2>
+						
+					</div>
+					<div class="columns download">
+						<p>
+							<a href="YogiBirbal_Resume.pdf" class="button" target="_blank" class="fa fa-download">Download Resume</a>
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+<!-- ABOUT SECTION END --> 
+
+
+
+	</body>
 </html>
