--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 	<html>
+	<!-- CSS -->
+	<link rel="stylesheet" type="text/css" href="css/vendow.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="css/base.css">
+
+
 	<body>
 		<h1>Hello World</h1>
 	<p>I'm hosted with GitHub Pages.</p>
@@ -11,7 +17,7 @@
 			</div>
 			<div class="nine columns main-col">
 				<h2>About me</h2>
-				<p>I', a Computer Science Major at Stony Brook University.</p>
+				<p>I'm, a Computer Science Major at Stony Brook University.</p>
 				<div class="row">
 					<div class="columns contact-details">
 						<h2>Contact Details</h2>
@@ -27,6 +33,48 @@
 		</div>
 	</section>
 <!-- ABOUT SECTION END --> 
+
+<!-- RESUME SECCTION START -->
+	<section class="resume">
+		<!-- EXPERIENCE -->
+		<div class="row exp">
+			<div class="three columns header-col">
+				<h1><span>Experience</span></h1>
+			</div>
+			<div class="nine columns main-col">
+				<div class="row item">
+					<div class="twelve columns"> 
+						<h3>Stony Brook University</h3>
+						<p class="info">Teaching Assistant: System Fundamentals <em class="date"><span>&bull;</span>January 2018 - Present</em></p>
+						<ul style="list-style-type: disc">
+							<li>Responsible for holding office hours to assis with lecture material</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- EXPERIENCE END -->
+		<!-- EDUCATION  -->
+		<div class="row education">
+			<div class="three columns header-col">
+				<h1><span>Education</span></h1>
+			</div>
+			<div class="nine columns main-col">
+				<div class="row item">
+					<div class=" twelve columns">
+						<h3>Stony Brook University | Stony Brook, NY</h3>
+						<p class="info">Bachelor of Science <em class="date"><span>&bull;</span>Graduation: December 2018</em></p>
+						<ul style="list-style-type: disc">
+							<li>Major: Computer Science</li>
+							<li>Current GPA: 3.8</li>
+						</ul>
+					</div>
+				</div>
+				
+			</div>			
+		</div>
+	</section>
+
 
 
 
