--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="css/vendor.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="css/base.css">
-
+	<link rel="stylesheet" type="text/css" href="css/fonts.css">
 
 	<body>
 		<h1>Hello World</h1>
