--- a/index.html
+++ b/index.html
@@ -110,7 +110,12 @@
 
    				<img src="images/profile-pic.jpg" alt="Profile Picture">
 
-   				<p class="lead">Lorem ipsum Exercitation culpa qui dolor consequat exercitation fugiat laborum ex ea eiusmod ad do aliqua occaecat nisi ad irure sunt id pariatur Duis laboris amet exercitation veniam labore consectetur ea id quis eiusmod.</p>
+   				<p class="lead">About Me
+Hello, my name is Yogi Birbal and I am currently a student pursuing a B.A. in Computer Science at Stony Brook University. I aspire to one day be a full-time software developer, researching and implementing solutions into technology that will help us all live our lives in an easier and more enjoyable fashion.</p>
+<p class="sub">
+​
+I personally enjoy solving complex and difficult problems. Sometimes, thinking on your feet can be quite the exercise for your brain. Tackling coding challenges is what I spend most of my time doing, however you can also find me playing video games and listening to pop music.
+</p>
    			</div>   			
 
    		</div>   		
@@ -200,9 +205,6 @@
 		<div class="row section-intro">
    		<div class="col-twelve">
 
-   			<h1>Resume</h1>
-
-   			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
 
    		</div>   		
    	</div> <!-- /section-intro--> 
@@ -307,10 +309,10 @@
 		<div class="row section-intro">
    		<div class="col-twelve">
 
-   			<h5>Portfolio</h5>
-   			<h1>Check Out Some of My Works.</h1>
+   			<h5></h5>
+   			<h1>My Projects</h1>
 
-   			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
+   			<p class="lead">Below are some projects that I have worked on in the past. </p>
 
    		</div>   		
    	</div> <!-- /section-intro--> 
@@ -328,9 +330,9 @@
 	                  <a href="#modal-01" class="overlay">	                  	           
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-		     					       <h3 class="folio-title">Liberty</h3>	     					    
+		     					       <h3 class="folio-title">MusicFind</h3>	     					    
 		     					    	 <span class="folio-types">
-		     					       	  Graphic Design
+		     					       	  
 		     					       </span>
 		     					   </div>	                      	
 	                     </div>                    
@@ -344,7 +346,7 @@
 	               	<a href="#modal-02" class="overlay">              		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Shutterbug</h3>	     					    
+	                     		<h3 class="folio-title">FaceMe</h3>	     					    
 		     					    	<span class="folio-types">
 		     					       	  Web Design
 		     					      </span>		     		
@@ -360,7 +362,7 @@
 	                  <a href="#modal-03" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Clouds</h3>	     					    
+	                     		<h3 class="folio-title">Ecran</h3>	     					    
 		     					    	<span class="folio-types">
 		     					       	  Web Design
 		     					      </span>		     		
@@ -599,7 +601,7 @@
 						</div>
 
 						<h3 class="stat-count">
-							1500
+							12
 						</h3>
 
 						<h5 class="stat-title">
@@ -608,38 +610,7 @@
 
 					</div> <!-- /stat -->					
 
-					<div class="bgrid stat">
-
-						<div class="icon-part">
-							<i class="icon-users"></i>
-						</div>
-
-						<h3 class="stat-count">
-							900
-						</h3>
-
-						<h5 class="stat-title">
-							Happy Clients
-						</h5>
-
-					</div> <!-- /stat -->
-
-					<div class="bgrid stat">
-
-						<div class="icon-part">
-							<i class="icon-badge"></i>
-						</div>
-
-						<h3 class="stat-count">
-							200
-						</h3>
-
-						<h5 class="stat-title">
-							Awards Received
-						</h5>
-
-					</div> <!-- /stat -->									
-
+					
 					<div class="bgrid stat">
 
 						<div class="icon-part">
@@ -679,11 +650,11 @@
 						</div>
 
 						<h3 class="stat-count">
-							7200
+							7210
 						</h3>
 
 						<h5 class="stat-title">
-							Hours
+							Hours Of Coding
 						</h5>
 
 					</div> <!-- /stat -->
