--- a/index.html
+++ b/index.html
@@ -111,11 +111,8 @@
    				<img src="images/profile-pic.jpg" alt="Profile Picture">
 
    				<p class="lead">About Me
-Hello, my name is Yogi Birbal and I am currently a student pursuing a B.A. in Computer Science at Stony Brook University. I aspire to one day be a full-time software developer, researching and implementing solutions into technology that will help us all live our lives in an easier and more enjoyable fashion.</p>
-<p class="sub">
-​
-I personally enjoy solving complex and difficult problems. Sometimes, thinking on your feet can be quite the exercise for your brain. Tackling coding challenges is what I spend most of my time doing, however you can also find me playing video games and listening to pop music.
-</p>
+					Hello, my name is Yogi Birbal and I am currently a student pursuing a B.A. in Computer Science at Stony Brook University. I aspire to one day be a full-time software developer, researching and implementing solutions with technology that will make our lives more enjoyable. I often spend my free time reading anything from thrillers to horror, and also have a fondness for foreign music!</p>
+
    			</div>   			
 
    		</div>   		
