--- a/index.html
+++ b/index.html
@@ -177,41 +177,34 @@
 
       </div> <!-- End Work -->
 
+   </section> <!-- Resume Section End-->
 
-      <!-- Skills
+   <section id="Skills">
+   	
+   	 <!-- Skills
       ----------------------------------------------- -->
       <div class="row skill">
 
-         <div class="three columns header-col">
-            <h1><span>Skills</span></h1>
+         <div class="four columns header-col">
+            <h1><span>Languages</span></h1>
          </div>
 
-         <div class="nine columns main-col">
+         <div class="eight columns main-col">
 
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-            eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-            voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-            voluptatem sequi nesciunt.
-            </p>
-
-				<div class="bars">
-
-				   <ul class="skills">
-					   <li><span class="bar-expand photoshop"></span><em>Photoshop</em></li>
-                  <li><span class="bar-expand illustrator"></span><em>Illustrator</em></li>
-						<li><span class="bar-expand wordpress"></span><em>Wordpress</em></li>
-						<li><span class="bar-expand css"></span><em>CSS</em></li>
-						<li><span class="bar-expand html5"></span><em>HTML5</em></li>
-                  <li><span class="bar-expand jquery"></span><em>jQuery</em></li>
-					</ul>
-
-				</div><!-- end skill-bars -->
+         	<h3>Programming Languages</h3>
+         	<p>Java, C, Python, Javascript</p>
+         	<h3>Scripting Languages</h3>
+         	<p>Bash, Perl</p>
+         	<h3>Internet Programming</h3>
+         	<p>Flask, CSS, HTML, Node.js</p>
+         	<h3>Other Languages</h3>
+         	<p>SQL, JSON, Assembly</p>
 
 			</div> <!-- main-col end -->
 
       </div> <!-- End skills -->
 
-   </section> <!-- Resume Section End-->
+   </section>
 
 
    <!-- Portfolio Section
@@ -231,11 +224,11 @@
                   <div class="item-wrap">
 
                      <a href="#modal-01" title="">
-                        <img alt="" src="images/portfolio/coffee.jpg">
+                        <img alt="" src="images/portfolio/into-the-light.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-          					      <h5>Coffee</h5>
-                              <p>Illustrration</p>
+          					      <h5>FindMe</h5>
+                              <p>Computer Vision App</p>
           					   </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
@@ -251,8 +244,8 @@
                         <img alt="" src="images/portfolio/console.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-          					      <h5>Console</h5>
-                              <p>Web Development</p>
+          					      <h5>MusicFind</h5>
+                              <p>Web Application</p>
           					   </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
@@ -268,7 +261,7 @@
                         <img alt="" src="images/portfolio/judah.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-          					      <h5>Judah</h5>
+          					      <h5>Ecran</h5>
                               <p>Webdesign</p>
           					   </div>
                         </div>
@@ -295,23 +288,6 @@
                   </div>
           		</div> <!-- item end -->
 
-               <div class="columns portfolio-item">
-                  <div class="item-wrap">
-
-                     <a href="#modal-05" title="">
-                        <img alt="" src="images/portfolio/farmerboy.jpg">
-                        <div class="overlay">
-                           <div class="portfolio-item-meta">
-          					      <h5>Farmer Boy</h5>
-                              <p>Branding</p>
-          					   </div>
-                        </div>
-                        <div class="link-icon"><i class="icon-plus"></i></div>
-                     </a>
-
-                  </div>
-          		</div> <!-- item end -->
-
 
          <!-- Modal Popup
 	      --------------------------------------------------------------- -->
@@ -321,8 +297,8 @@
 		      <img class="scale-with-grid" src="images/portfolio/modals/m-coffee.jpg" alt="" />
 
 		      <div class="description-box">
-			      <h4>Coffee Cup</h4>
-			      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+			      <h4>FindMe</h4>
+			      <p>A computer vision Application that uses the AWS Deeplens to detect any faces, and notify owner with an SMS notification.</p>
                <span class="categories"><i class="fa fa-tag"></i>Branding, Webdesign</span>
 		      </div>
 
@@ -338,8 +314,8 @@
 		      <img class="scale-with-grid" src="images/portfolio/modals/m-console.jpg" alt="" />
 
 		      <div class="description-box">
-			      <h4>Console</h4>
-			      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+			      <h4>MusicFind</h4>
+			      <p>A web application that utlizes the SoundCloud API to search for various musical artists and the albums they have released, as well as linking them to the album on Splotify for a listen.</p>
                <span class="categories"><i class="fa fa-tag"></i>Branding, Web Development</span>
 		      </div>
 
@@ -355,8 +331,8 @@
 		      <img class="scale-with-grid" src="images/portfolio/modals/m-judah.jpg" alt="" />
 
 		      <div class="description-box">
-			      <h4>Judah</h4>
-			      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+			      <h4>Ecran</h4>
+			      <p>A terminal Multiplexor which supports up to 10 virtual sessions.</p>
                <span class="categories"><i class="fa fa-tag"></i>Branding</span>
 		      </div>
 
@@ -384,30 +360,9 @@
 
 	      </div><!-- modal-04 End -->
 
-         <div id="modal-05" class="popup-modal mfp-hide">
-
-		      <img class="scale-with-grid" src="images/portfolio/modals/m-farmerboy.jpg" alt="" />
-
-		      <div class="description-box">
-			      <h4>Farmer Boy</h4>
-			      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-               <span class="categories"><i class="fa fa-tag"></i>Branding, Webdesign</span>
-		      </div>
-
-            <div class="link-box">
-               <a href="http://www.behance.net">Details</a>
-		         <a class="popup-modal-dismiss">Close</a>
-            </div>
-
-	      </div><!-- modal-05 End -->
-
       </div> <!-- row End -->
 
    </section> <!-- Portfolio Section End-->
-
-
-
-  
 
 
    <!-- Contact Section
@@ -425,6 +380,7 @@
             <div class="ten columns">
 
                   <p class="lead">Get in touch!</p>
+                  <p>Contact me through my Email, LinkedIn, or Github.</p>
 
             </div>
 
@@ -439,7 +395,6 @@
 					<fieldset>
 
                   <div>
-                     <button class="submit">Submit</button>
                      <span id="image-loader">
                         <img alt="" src="images/loader.gif">
                      </span>
@@ -486,8 +441,7 @@
             </ul>
 
             <ul class="copyright">
-               <li>&copy; Copyright 2014 CeeVee</li>
-               <li>Design by <a title="Styleshout" href="http://www.styleshout.com/">Styleshout</a></li>   
+               <li><a title="Styleshout" href="http://www.styleshout.com/">Design Credit</a></li>   
             </ul>
 
          </div>
