--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
          <ul id="nav" class="nav">
             <li class="current"><a class="smoothscroll" href="#home">Home</a></li>
             <li><a class="smoothscroll" href="#about">About</a></li>
-	         <li><a class="smoothscroll" href="#resume">Resume</a></li>
-            <li><a class="smoothscroll" href="#portfolio">Works</a></li>
-            <li><a class="smoothscroll" href="#testimonials">Testimonials</a></li>
+	         <li><a class="smoothscroll" href="#resume">Experience</a></li>
+            <li><a class="smoothscroll" href="#Skills">Skills</a></li>
+            <li><a class="smoothscroll" href="#portfolio">Projects</a></li>
             <li><a class="smoothscroll" href="#contact">Contact</a></li>
          </ul> <!-- end #nav -->
 
@@ -183,7 +183,7 @@
    	
    	 <!-- Skills
       ----------------------------------------------- -->
-      <div class="row skill">
+      <div class="row">
 
          <div class="four columns header-col">
             <h1><span>Languages</span></h1>
