--- a/index.html
+++ b/index.html
@@ -177,6 +177,35 @@
 
       </div> <!-- End Work -->
 
+
+                  <section id="Skills">
+     
+   	 <!-- Skills
+      ----------------------------------------------- -->
+      <div class="row">
+
+         <div class="three columns header-col">
+            <h1><span>Languages</span></h1>
+         </div>
+
+         <div class="nine columns main-col">
+
+         	<h3>Programming Languages</h3>
+         	<p class="info">Java, C, Python, Javascript</p>
+         	<h3>Scripting Languages</h3>
+         	<p class="info">Bash, Perl</p>
+         	<h3>Internet Programming</h3>
+         	<p class="info">Flask, CSS, HTML, Node.js</p>
+         	<h3>Other Languages</h3>
+         	<p class="info">SQL, JSON, Assembly</p>
+
+			</div> <!-- main-col end -->
+
+      </div> <!-- End skills -->
+
+   </section>
+
+
    </section> <!-- Resume Section End-->
 
    <section id="Skills">
