--- a/index.html
+++ b/index.html
@@ -326,9 +326,9 @@
 		      <img class="scale-with-grid" src="images/portfolio/modals/m-coffee.jpg" alt="" />
 
 		      <div class="description-box">
-			      <h4>FindMe</h4>
+			      <h4><a href="https://github.com/yogibirbal">FindMe</a></h4>
 			      <p>A computer vision Application that uses the AWS Deeplens to detect any faces, and notify owner with an SMS notification.</p>
-               <span class="categories"><i class="fa fa-tag"></i>Branding, Webdesign</span>
+               <span class="categories"><i class="fa fa-tag"></i>AWS Deeplens, Node.js</span>
 		      </div>
 
             <div class="link-box">
@@ -343,9 +343,9 @@
 		      <img class="scale-with-grid" src="images/portfolio/modals/m-console.jpg" alt="" />
 
 		      <div class="description-box">
-			      <h4>MusicFind</h4>
+			      <h4><a href="https://github.com/yogibirbal">MusicFind</a></h4>
 			      <p>A web application that utlizes the SoundCloud API to search for various musical artists and the albums they have released, as well as linking them to the album on Splotify for a listen.</p>
-               <span class="categories"><i class="fa fa-tag"></i>Branding, Web Development</span>
+               <span class="categories"><i class="fa fa-tag"></i>Javascript, HTML, CSS, Meteor</span>
 		      </div>
 
             <div class="link-box">
@@ -360,9 +360,9 @@
 		      <img class="scale-with-grid" src="images/portfolio/modals/m-judah.jpg" alt="" />
 
 		      <div class="description-box">
-			      <h4>Ecran</h4>
+			      <h4><a href="https://github.com/yogibirbal">Ecran</a></h4>
 			      <p>A terminal Multiplexor which supports up to 10 virtual sessions.</p>
-               <span class="categories"><i class="fa fa-tag"></i>Branding</span>
+               <span class="categories"><i class="fa fa-tag"></i>C</span>
 		      </div>
 
             <div class="link-box">
@@ -377,9 +377,9 @@
 		      <img class="scale-with-grid" src="images/portfolio/modals/m-intothelight.jpg" alt="" />
 
 		      <div class="description-box">
-			      <h4>Into the Light</h4>
-			      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-               <span class="categories"><i class="fa fa-tag"></i>Photography</span>
+			      <h4><a href="https://github.com/yogibirbal">Stonypedia</a></h4>
+			      <p>A Web Application that serves as a mock Travel Site, allowing users to query and reserve flights, hotels and activities upon login.</p>
+               <span class="categories"><i class="fa fa-tag"></i>Node.js, MySQL, HTML, CSS</span>
 		      </div>
 
             <div class="link-box">
