--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <li class="current"><a class="smoothscroll" href="#home">Home</a></li>
             <li><a class="smoothscroll" href="#about">About</a></li>
 	         <li><a class="smoothscroll" href="#resume">Experience</a></li>
-            <li><a class="smoothscroll" href="#Skills">Skills</a></li>
+            <!--<li><a class="smoothscroll" href="#Skills">Skills</a></li>-->
             <li><a class="smoothscroll" href="#portfolio">Projects</a></li>
             <li><a class="smoothscroll" href="#contact">Contact</a></li>
          </ul> <!-- end #nav -->
@@ -97,7 +97,7 @@
 
                <div class="columns download">
                   <p>
-                     <a href="#" class="button"><i class="fa fa-download"></i>Download Resume</a>
+                     <a href="YOGIBIRBAL_RES.pdf" class="button"><i class="fa fa-download"></i>Download Resume</a>
                   </p>
                </div>
 
@@ -207,34 +207,6 @@
 
 
    </section> <!-- Resume Section End-->
-
-   <section id="Skills">
-   	
-   	 <!-- Skills
-      ----------------------------------------------- -->
-      <div class="row">
-
-         <div class="four columns header-col">
-            <h1><span>Languages</span></h1>
-         </div>
-
-         <div class="eight columns main-col">
-
-         	<h3>Programming Languages</h3>
-         	<p>Java, C, Python, Javascript</p>
-         	<h3>Scripting Languages</h3>
-         	<p>Bash, Perl</p>
-         	<h3>Internet Programming</h3>
-         	<p>Flask, CSS, HTML, Node.js</p>
-         	<h3>Other Languages</h3>
-         	<p>SQL, JSON, Assembly</p>
-
-			</div> <!-- main-col end -->
-
-      </div> <!-- End skills -->
-
-   </section>
-
 
    <!-- Portfolio Section
    ================================================== -->
@@ -377,7 +349,7 @@
 		      <img class="scale-with-grid" src="images/portfolio/modals/m-intothelight.jpg" alt="" />
 
 		      <div class="description-box">
-			      <h4><a href="https://github.com/yogibirbal">Stonypedia</a></h4>
+			      <h4><a href="https://github.com/yogibirbal">PinkTraveler</a></h4>
 			      <p>A Web Application that serves as a mock Travel Site, allowing users to query and reserve flights, hotels and activities upon login.</p>
                <span class="categories"><i class="fa fa-tag"></i>Node.js, MySQL, HTML, CSS</span>
 		      </div>
@@ -409,7 +381,7 @@
             <div class="ten columns">
 
                   <p class="lead">Get in touch!</p>
-                  <p>Contact me through my Email, LinkedIn, or Github.</p>
+                  <p>Contact me through my <a class="smoothscroll" href="mailto:ybirbal1998@gmail.com">Email</a>, <a class="smoothscroll" href="#">LinkedIn</a>, or <a class="smoothscroll" href="https://github.com/yogibirbal">Github</a>.</p>
 
             </div>
 
