--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!--- Basic Page Needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Ceevee - Free Responsive HTML5/CSS3 Template</title>
+	<title>Yogi Birbal</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -82,7 +82,7 @@
 
          <div class="three columns">
 
-            <img class="profile-pic"  src="images/profilepic.jpg" alt="" />
+            <img class="profile-pic"  src="images/Profile_pic.jpg" alt="" />
 
          </div>
 
@@ -97,7 +97,7 @@
 
                <div class="columns download">
                   <p>
-                     <a href="YOGIBIRBAL_RES.pdf" class="button"><i class="fa fa-download"></i>Download Resume</a>
+                     <a href="YOGIBIRBAL_RES.pdf" target="_blank" class="button"><i class="fa fa-download"></i>Download Resume</a>
                   </p>
                </div>
 
@@ -298,7 +298,7 @@
 		      <img class="scale-with-grid" src="images/portfolio/modals/m-coffee.jpg" alt="" />
 
 		      <div class="description-box">
-			      <h4><a href="https://github.com/yogibirbal">FindMe</a></h4>
+			      <h4><a href="https://github.com/yogibirbal" target="_blank">FindMe</a></h4>
 			      <p>A computer vision Application that uses the AWS Deeplens to detect any faces, and notify owner with an SMS notification.</p>
                <span class="categories"><i class="fa fa-tag"></i>AWS Deeplens, Node.js</span>
 		      </div>
@@ -315,7 +315,7 @@
 		      <img class="scale-with-grid" src="images/portfolio/modals/m-console.jpg" alt="" />
 
 		      <div class="description-box">
-			      <h4><a href="https://github.com/yogibirbal">MusicFind</a></h4>
+			      <h4><a href="https://github.com/yogibirbal" target="_blank">MusicFind</a></h4>
 			      <p>A web application that utlizes the SoundCloud API to search for various musical artists and the albums they have released, as well as linking them to the album on Splotify for a listen.</p>
                <span class="categories"><i class="fa fa-tag"></i>Javascript, HTML, CSS, Meteor</span>
 		      </div>
@@ -332,7 +332,7 @@
 		      <img class="scale-with-grid" src="images/portfolio/modals/m-judah.jpg" alt="" />
 
 		      <div class="description-box">
-			      <h4><a href="https://github.com/yogibirbal">Ecran</a></h4>
+			      <h4><a href="https://github.com/yogibirbal" target="_blank">Ecran</a></h4>
 			      <p>A terminal Multiplexor which supports up to 10 virtual sessions.</p>
                <span class="categories"><i class="fa fa-tag"></i>C</span>
 		      </div>
@@ -349,7 +349,7 @@
 		      <img class="scale-with-grid" src="images/portfolio/modals/m-intothelight.jpg" alt="" />
 
 		      <div class="description-box">
-			      <h4><a href="https://github.com/yogibirbal">PinkTraveler</a></h4>
+			      <h4><a href="https://github.com/yogibirbal" target="_blank">PinkTraveler</a></h4>
 			      <p>A Web Application that serves as a mock Travel Site, allowing users to query and reserve flights, hotels and activities upon login.</p>
                <span class="categories"><i class="fa fa-tag"></i>Node.js, MySQL, HTML, CSS</span>
 		      </div>
@@ -381,7 +381,7 @@
             <div class="ten columns">
 
                   <p class="lead">Get in touch!</p>
-                  <p>Contact me through my <a class="smoothscroll" href="mailto:ybirbal1998@gmail.com">Email</a>, <a class="smoothscroll" href="#">LinkedIn</a>, or <a class="smoothscroll" href="https://github.com/yogibirbal">Github</a>.</p>
+                  <p>Contact me through my <a class="smoothscroll" href="mailto:ybirbal1998@gmail.com">Email</a>, <a class="smoothscroll" target="_blank" href="#">LinkedIn</a>, or <a class="smoothscroll" target="_blank" href="https://github.com/yogibirbal">Github</a>.</p>
 
             </div>
 
@@ -438,7 +438,7 @@
             <ul class="social-links">
 				<li><a href="https://github.com/yogibirbal"><i class="fa fa-github"></i></a></li>
                <li><a href="mailto:ybirbal1998@gmail.com" target="_blank"><i class="fa fa-envelope-o"></i></a></li>
-               <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+               <li><a href="#" target="_blank"><i class="fa fa-linkedin"></i></a></li>
             </ul>
 
             <ul class="copyright">
