--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
          <div class="three columns">
 
-            <img class="profile-pic"  src="images/Profile_pic.jpg" alt="" />
+            <img class="profile-pic"  src="images/Profile_pic.jpg" alt="it me" />
 
          </div>
 
@@ -114,6 +114,47 @@
    ================================================== -->
    <section id="resume">
 
+
+
+   	<!-- Work
+      ----------------------------------------------- -->
+      <div class="row work">
+
+         <div class="three columns header-col">
+            <h1><span>Experience</span></h1>
+         </div>
+
+         <div class="nine columns main-col">
+
+            <div class="row item">
+
+               <div class="twelve columns">
+
+                  <h3>Mutual of America</h3>
+                  <p class="info">Software Engineering Intern <span>&bull;</span> <em class="date">May 2018 - August 2018</em></p>
+
+               </div>
+
+            </div> <!-- item end -->
+
+            <div class="row item">
+
+               <div class="twelve columns">
+
+                  <h3>Stony Brook University</h3>
+                  <p class="info">Teaching Assistant: System Fundamentals <span>&bull;</span> <em class="date">January 2018 - Present</em></p>
+
+               </div>
+
+            </div> <!-- item end -->
+
+         </div> <!-- main-col end -->
+
+      </div> <!-- End Work -->
+
+      
+
+
       <!-- Education
       ----------------------------------------------- -->
       <div class="row education">
@@ -141,41 +182,7 @@
       </div> <!-- End Education -->
 
 
-      <!-- Work
-      ----------------------------------------------- -->
-      <div class="row work">
-
-         <div class="three columns header-col">
-            <h1><span>Experience</span></h1>
-         </div>
-
-         <div class="nine columns main-col">
-
-            <div class="row item">
-
-               <div class="twelve columns">
-
-                  <h3>Mutual of America</h3>
-                  <p class="info">Software Engineering Intern <span>&bull;</span> <em class="date">May 2018 - </em></p>
-
-               </div>
-
-            </div> <!-- item end -->
-
-            <div class="row item">
-
-               <div class="twelve columns">
-
-                  <h3>Stony Brook University</h3>
-                  <p class="info">Teaching Assistant: System Fundamentals <span>&bull;</span> <em class="date">January 2018 - Present</em></p>
-
-               </div>
-
-            </div> <!-- item end -->
-
-         </div> <!-- main-col end -->
-
-      </div> <!-- End Work -->
+      
 
 
                   <section id="Skills">
