--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
                <div class="columns download">
                   <p>
-                     <a href="YOGIBIRBAL_RES.pdf" target="_blank" class="button"><i class="fa fa-download"></i>Download Resume</a>
+                     <a href="Yogi_Birbal_Resume.pdf" target="_blank" class="button"><i class="fa fa-download"></i>Download Resume</a>
                   </p>
                </div>
 
