--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <ul class="social">
                <li><a href="https://github.com/yogibirbal"><i class="fa fa-github"></i></a></li>
                <li><a href="mailto:ybirbal1998@gmail.com" target="_blank"><i class="fa fa-envelope-o"></i></a></li>
-               <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+               <li><a href="https://www.linkedin.com/in/ybirbal/"><i class="fa fa-linkedin"></i></a></li>
             </ul>
          </div>
       </div>
@@ -388,7 +388,7 @@
             <div class="ten columns">
 
                   <p class="lead">Get in touch!</p>
-                  <p>Contact me through my <a class="smoothscroll" href="mailto:ybirbal1998@gmail.com">Email</a>, <a class="smoothscroll" target="_blank" href="#">LinkedIn</a>, or <a class="smoothscroll" target="_blank" href="https://github.com/yogibirbal">Github</a>.</p>
+                  <p>Contact me through my <a class="smoothscroll" href="mailto:ybirbal1998@gmail.com">Email</a>, <a class="smoothscroll" target="_blank" href="https://www.linkedin.com/in/ybirbal/">LinkedIn</a>, or <a class="smoothscroll" target="_blank" href="https://github.com/yogibirbal">Github</a>.</p>
 
             </div>
 
@@ -445,7 +445,7 @@
             <ul class="social-links">
 				<li><a href="https://github.com/yogibirbal"><i class="fa fa-github"></i></a></li>
                <li><a href="mailto:ybirbal1998@gmail.com" target="_blank"><i class="fa fa-envelope-o"></i></a></li>
-               <li><a href="#" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+               <li><a href="https://www.linkedin.com/in/ybirbal/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
             </ul>
 
             <ul class="copyright">
