--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="row banner">
          <div class="banner-text">
             <h1 class="responsive-headline">I'm Yogi Birbal.</h1>
-            Learn more <a class="smoothscroll" href="#about">about me</a>!</h3>
+            <h3>Learn more <a class="smoothscroll" href="#about">about me</a>!</h3>
             <hr />
             <ul class="social">
                <li><a href="https://github.com/yogibirbal"><i class="fa fa-github"></i></a></li>
@@ -249,7 +249,7 @@
                   <div class="item-wrap">
 
                      <a href="#modal-02" title="">
-                        <img alt="" src="images/portfolio/console.jpg">
+                        <img alt="" src="images/portfolio/msc.png">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
           					      <h5>MusicFind</h5>
@@ -266,11 +266,11 @@
                   <div class="item-wrap">
 
                      <a href="#modal-03" title="">
-                        <img alt="" src="images/portfolio/judah.jpg">
+                        <img alt="" src="images/portfolio/term.png">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
           					      <h5>Ecran</h5>
-                              <p>Webdesign</p>
+                              <p>Systems Project</p>
           					   </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
@@ -283,11 +283,11 @@
                   <div class="item-wrap">
 
                      <a href="#modal-04" title="">
-                        <img alt="" src="images/portfolio/into-the-light.jpg">
+                        <img alt="" src="images/portfolio/pnk.png">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-          					      <h5>Into The Light</h5>
-                              <p>Photography</p>
+          					      <h5>PinkTraveler</h5>
+                              <p>Travel Website</p>
           					   </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
@@ -302,7 +302,7 @@
 
          <div id="modal-01" class="popup-modal mfp-hide">
 
-		      <img class="scale-with-grid" src="images/portfolio/modals/m-coffee.jpg" alt="" />
+		      <img class="scale-with-grid" src="images/portfolio/modals/m-shutterbug.jpg" alt="" />
 
 		      <div class="description-box">
 			      <h4><a href="https://github.com/yogibirbal" target="_blank">FindMe</a></h4>
@@ -311,7 +311,7 @@
 		      </div>
 
             <div class="link-box">
-               <a href="http://www.behance.net">Details</a>
+
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
@@ -319,16 +319,16 @@
 
          <div id="modal-02" class="popup-modal mfp-hide">
 
-		      <img class="scale-with-grid" src="images/portfolio/modals/m-console.jpg" alt="" />
+		      <img class="scale-with-grid" src="images/portfolio/modals/m-origami.jpg" alt="" />
 
 		      <div class="description-box">
-			      <h4><a href="https://github.com/yogibirbal" target="_blank">MusicFind</a></h4>
+			      <h4><a href="https://github.com/yogibirbal/MusicFind" target="_blank">MusicFind</a></h4>
 			      <p>A web application that utlizes the SoundCloud API to search for various musical artists and the albums they have released, as well as linking them to the album on Splotify for a listen.</p>
                <span class="categories"><i class="fa fa-tag"></i>Javascript, HTML, CSS, Meteor</span>
 		      </div>
 
             <div class="link-box">
-               <a href="http://www.behance.net">Details</a>
+
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
@@ -336,16 +336,16 @@
 
          <div id="modal-03" class="popup-modal mfp-hide">
 
-		      <img class="scale-with-grid" src="images/portfolio/modals/m-judah.jpg" alt="" />
+		      <img class="scale-with-grid" src="images/portfolio/modals/m-retrocam.jpg" alt="" />
 
 		      <div class="description-box">
-			      <h4><a href="https://github.com/yogibirbal" target="_blank">Ecran</a></h4>
-			      <p>A terminal Multiplexor which supports up to 10 virtual sessions.</p>
+			      <h4><a href="https://github.com/yogibirbal/Ecran" target="_blank">Ecran</a></h4>
+			      <p>A terminal Multiplexor with split screen support and status bar.</p>
                <span class="categories"><i class="fa fa-tag"></i>C</span>
 		      </div>
 
             <div class="link-box">
-               <a href="http://www.behance.net">Details</a>
+
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
@@ -353,16 +353,16 @@
 
          <div id="modal-04" class="popup-modal mfp-hide">
 
-		      <img class="scale-with-grid" src="images/portfolio/modals/m-intothelight.jpg" alt="" />
+		      <img class="scale-with-grid" src="images/portfolio/modals/m-clouds.jpg" alt="" />
 
 		      <div class="description-box">
-			      <h4><a href="https://github.com/yogibirbal" target="_blank">PinkTraveler</a></h4>
+			      <h4><a href="https://github.com/yogibirbal/PinkTraveler" target="_blank">PinkTraveler</a></h4>
 			      <p>A Web Application that serves as a mock Travel Site, allowing users to query and reserve flights, hotels and activities upon login.</p>
                <span class="categories"><i class="fa fa-tag"></i>Node.js, MySQL, HTML, CSS</span>
 		      </div>
 
             <div class="link-box">
-               <a href="http://www.behance.net">Details</a>
+
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
